--- a/build-cppEditor-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Makefile.Debug
+++ b/build-cppEditor-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/Makefile.Debug
@@ -654,7 +654,51 @@ debug/mainwindow.o: ../cppEditor/mainwindow.cpp ../cppEditor/mainwindow.h \
 		C:/Qt/6.6.0/mingw_64/include/QtGui/QTransform \
 		C:/Qt/6.6.0/mingw_64/include/QtCore/qnativeinterface.h \
 		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qtabwidget.h \
-		ui_mainwindow.h
+		ui_mainwindow.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/QVariant \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/QAction \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/QApplication \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qapplication.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qcoreapplication.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qeventloop.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qcoreapplication_platform.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qfuture.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qfutureinterface.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qmutex.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qdeadlinetimer.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qelapsedtimer.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qtsan_impl.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qresultstore.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qfuture_impl.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qthreadpool.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qthread.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qrunnable.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qexception.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qpromise.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qguiapplication.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qinputmethod.h \
+		C:/Qt/6.6.0/mingw_64/include/QtCore/qlocale.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qguiapplication_platform.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/QMenu \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qmenu.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/QMenuBar \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qmenubar.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/QPlainTextEdit \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qplaintextedit.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qtextedit.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qabstractscrollarea.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/qframe.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qtextdocument.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qtextoption.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qtextcursor.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qtextformat.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qpen.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qabstracttextdocumentlayout.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qtextlayout.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qglyphrun.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qrawfont.h \
+		C:/Qt/6.6.0/mingw_64/include/QtGui/qfontdatabase.h \
+		C:/Qt/6.6.0/mingw_64/include/QtWidgets/QWidget
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o debug\mainwindow.o ..\cppEditor\mainwindow.cpp
 
 debug/moc_mainwindow.o: debug/moc_mainwindow.cpp 
